# Cpp-learning

./: .gitignore  CMakeLists.txt  README.md
Registration program/: Account.cpp  Account.h  CMakeLists.txt  Data.cpp  Data.h  Registration  Registration.cpp  Registration.h  System.cpp  System.h  Validator.cpp  Validator.h  data.txt  main.cpp  runner.sh
Registration program/headers/: Account.h  BinaryFile.h  File.h  Registration.h  System.h  Validator.h
Registration program/headers/Menu/: EditInformation.h  LoginMenu.h  MainMenu.h  Menu.h  MenuManager.h  RegisterMenu.h
Registration program/headers/Processes/: LoginProcess.h  Process.h  RegistrationProcess.h
Registration program/headers/Tools/: BinaryFile.h  CasualFile.h  File.h  ReadInput.h  Validator.h
Registration program/headers/Tools/File/: BinaryFile.h  CasualFile.h  File.h
Registration program/headers/Tools/System and control/: ConsoleControl.h  ReadInput.h  Validator.h
Registration program/headers/file headers/: BinaryFile.h  CasualFile.h  File.h
Registration program/src/: Account.cpp  BinaryFile.cpp  CasualFile.cpp  CasualFile.h  File.cpp  ReadInput.cpp  Registration.cpp  System.cpp  Validator.cpp
Registration program/src/Menu/: EditInformation.cpp  LoginMenu.cpp  MainMenu.cpp  MenuManager.cpp  RegisterMenu.cpp
Registration program/src/Processes/: LoginProcess.cpp  Process.cpp  RegistrationProcess.cpp
Registration program/src/Tools/: BinaryFile.cpp  CasualFile.cpp  ReadInput.cpp  Validator.cpp
Registration program/src/Tools/File/: BinaryFile.cpp  CasualFile.cpp
Registration program/src/Tools/System and control/: ConsoleControl.cpp  ReadInput.cpp  Validator.cpp
Registration program/src/file class/: BinaryFile.cpp  CasualFile.cpp
classes/task1/: Course.cpp  Course.h  Student.cpp  Student.h  main  main.cpp
classes/task1/main.dSYM/Contents/Resources/DWARF/: main
classes/task2/: Matrix.cpp  Matrix.h  main.cpp
pointers/: task1  task1.cpp  task2  task2.cpp  task3.cpp  task3.h  task4.cpp  task4.h
some new things/: bit_operators.cpp
